tests/paczka1/small_fuzzy/90678560.err
Error in line 7: DxF=Lm3Zw8 S538 4,4
Error in line 10: JKd S838 20,3
